--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,10 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v2
-        with:
-          dockerfile: Dockerfile
-          context: .
+        uses: docker/setup-qemu-action@v2
 
       - name: Build Docker image
         run: docker build -t nilu12/flask-app:latest .
