--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -e {0}
 
     steps:
       - name: Checkout repository
@@ -15,6 +18,11 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-qemu-action@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
       - name: Build Docker image
         run: docker build -t nilu12/flask-app:latest .
