--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,18 +14,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v2
+        uses: docker/setup-docker@v2.7.0  # Use the latest version available
         with:
           dockerfile: Dockerfile
           context: .
 
       - name: Build Docker image
         run: docker build -t nilu12/flask-app:latest .
-
-      - name: Set up Docker
+        
+      - name: Push Docker image to DockerHub
         run: |
-          docker build -t nilu12/flask-app:latest .
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker push nilu12/flask-app:latest
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
