--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,15 +14,17 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-docker@v2.7.0  # Use the latest version available
+        uses: docker/cli@v2.7.0  # Use the latest version available
         with:
-          dockerfile: Dockerfile
-          context: .
+          version: '20.10.10'  # Specify the Docker CLI version
 
       - name: Build Docker image
         run: docker build -t nilu12/flask-app:latest .
         
       - name: Push Docker image to DockerHub
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
           docker push nilu12/flask-app:latest
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
