--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,9 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/cli@v2.7.0  # Use the latest version available
-        with:
-          version: '20.10.10'  # Specify the Docker CLI version
+        uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
         run: docker build -t nilu12/flask-app:latest .
